出品ページ遷移(ログイン有無)

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -180,10 +180,19 @@
   </div>
   <%# /商品一覧 %>
 </div>
+<%#出品ボタン、ログイン有無%>
 <div class='purchase-btn'>
   <span class='purchase-btn-text'>出品する</span>
-  <a href="#">
-    <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-  </a>
+    <ul class='lists-right'>
+      <% if user_signed_in? %>
+        <a href="/items/new">
+          <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+        </a>
+      <% else %>
+        <a href="#">
+          <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
+        </a>
+      <% end %>
+    </ul>
 </div>
 <%= render "shared/footer" %>
