--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -189,13 +189,13 @@
   <span class='purchase-btn-text'>出品する</span>
     <ul class='lists-right'>
       <% if user_signed_in? %>
-        <a href="/items/new">
+        <%= link_to new_item_path do %>
           <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-        </a>
+        <% end %>
       <% else %>
-        <a href="#">
+        <%= link_to new_user_session_path do %>
           <%= image_tag 'camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-        </a>
+        <% end %>
       <% end %>
     </ul>
 </div>
