--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,12 +127,11 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
-      <% @items.each do |items| %>
       <li class='list'>
       
         <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag items.image, class: "item-img" if items.image.attached? %>
+          <%= image_tag "furima-intro05.png", class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -143,17 +142,16 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%= items.name %>
+            <%=  %>
           </h3>
           <div class='item-price'>
-            <span><%= items.price %>円<br>(税込み)</span>
+            <span><%= %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
-        <% end %>
       </li>
       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
