--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -127,11 +127,12 @@
     <ul class='item-lists'>
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
+      <% @items.each do |items| %>
       <li class='list'>
       
         <%= link_to "#" do %>
         <div class='item-img-content'>
-          <%= image_tag "furima-intro05.png", class: "item-img" %>
+          <%= image_tag items.image, class: "item-img" if items.image.attached? %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -142,16 +143,17 @@
         </div>
         <div class='item-info'>
           <h3 class='item-name'>
-            <%=  %>
+            <%= items.name %>
           </h3>
           <div class='item-price'>
-            <span><%= %>円<br>(税込み)</span>
+            <span><%= items.price %>円<br>(税込み)</span>
             <div class='star-btn'>
               <%= image_tag "star.png", class:"star-icon" %>
               <span class='star-count'>0</span>
             </div>
           </div>
         </div>
+        <% end %>
       </li>
       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
@@ -175,12 +177,12 @@
         </div>
         <% end %>
       </li>
-      
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
     </ul>
   </div>
   <%# /商品一覧 %>
+
 </div>
 <%#出品ボタン、ログイン有無%>
 <div class='purchase-btn'>
