--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -123,16 +123,16 @@
   <%# 商品一覧 %>
   <div class='item-contents'>
     <h2 class='title'>ピックアップカテゴリー</h2>
-    <%= link_to '新規投稿商品', "#", class: "subtitle" %>
+    <%= link_to '新規投稿商品', new_item_path, class: "subtitle" %>
     <ul class='item-lists'>
+
 
       <%# 商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
       <% @items.each do |items| %>
       <li class='list'>
-      
-        <%= link_to "#" do %>
+        <%= link_to item_path(items.id), method: :get do %>
         <div class='item-img-content'>
-          <%= image_tag items.image, class: "item-img" if items.image.attached? %>
+          <%= image_tag items.image, class: "item-img" %>
 
           <%# 商品が売れていればsold outを表示しましょう %>
           <div class='sold-out'>
@@ -158,10 +158,9 @@
       <% end %>
       <%# //商品のインスタンス変数になにか入っている場合、中身のすべてを展開できるようにしましょう %>
 
+  <% if @items.length == 0 %>
       <%# 商品がない場合のダミー %>
       <%# 商品がある場合は表示されないようにしましょう %>
-      <% if user_signed_in? %>
-      <% else %>
       <li class='list'>
         <%= link_to '#' do %>
         <%= image_tag "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/10/a004.png", class: "item-img" %>
@@ -179,12 +178,13 @@
         </div>
         <% end %>
       </li>
-      <% end %>
       <%# //商品がある場合は表示されないようにしましょう %>
       <%# /商品がない場合のダミー %>
+  <% end %>
     </ul>
   </div>
   <%# /商品一覧 %>
+
 
 </div>
 <%#出品ボタン、ログイン有無%>
