--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,8 +9,7 @@
     <div class='item-img-content'>
       <%= image_tag @item.image ,class:"item-box-img" %>
       <%# 商品が売れている場合は、sold outを表示しましょう %>
-      <%if @item.orders_manage == nil %>
-      <% else %>
+      <% unless @item.orders_manage == nil then %>
       <div class='sold-out'>
         <span>Sold Out!!</span>
       </div>
