--- a/app/views/orders_manages/index.html.erb
+++ b/app/views/orders_manages/index.html.erb
@@ -31,8 +31,8 @@
     </div>
     <%# /支払額の表示 %>
 
-    <%= form_with model: @orders_manage,  url:item_orders_manages_path(@item.id), id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
-      <%= render 'shared/error_messages', model: f.object %>
+    <%= form_with url:item_orders_manages_path(@item.id), id: 'charge-form', class: 'transaction-form-wrap',local: true do |f| %>
+      <%= render 'shared/error_messages', model: @orders_manage %>
 
     <%# カード情報の入力 %>
     <div class='credit-card-form'>
